--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ bandit = "^1.6.2"
 autoflake = "^1.3.1"
 django-cleanup = "^5.0.0"
 django-crispy-forms = "^1.9.2"
+django-phone-field = "^1.8.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
