--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-cleanup = "^5.0.0"
 django-crispy-forms = "^1.9.2"
 django-phone-field = "^1.8.1"
 xhtml2pdf = "^0.2.4"
+autopep8 = "^1.5.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
