--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,18 @@ django-phone-field = "^1.8.1"
 xhtml2pdf = "^0.2.4"
 autopep8 = "^1.5.4"
 
+[tool.isort]
+line_length = 120
+known_future_library = "future"
+known_first_party = "app"
+known_django = "django"
+known_third_party = "django-cleanup, django-crispy-forms, django-phone-field, xhtml2pdf"
+multi_line_output = 3
+include_trailing_comma = "True"
+indent = '    '
+skip = "manage.py,migrations,venv,node_modules,virtualenv"
+sections = "FUTURE, STDLIB, DJANGO, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
